--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jobs",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "app.js",
   "dependencies": {
@@ -91,7 +92,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no tests specified\" && exit 1",
     "start": "node app.js"
   },
   "author": "",
